deploy: 591d8577c5af6d3bd1c483af00fdfa25e633d824

--- a/index.html
+++ b/index.html
@@ -213,6 +213,11 @@ A website dedicated to quality, fairly made goods.
 </a>
 </li>
 <li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/italy/>
+<span class=ttc>italy</span>
+</a>
+</li>
+<li class="dib mr1 mb2">
 <a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/japan/>
 <span class=ttc>Japan</span>
 </a>
