--- a/origins/belgium/index.html
+++ b/origins/belgium/index.html
@@ -70,7 +70,7 @@ Demeyere
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Demeyere offers a wide range of made in belgium cookware.
+Demeyere offers a wide range of cookware, made in Belgium. Some of their specialty cookware, such as non-stick cookware, are made in Italy. A few accessories are made elsewhere. Their website lists the origin for each product on its product page.
 </div>
 </div>
 </div>
