--- a/origins/canada/index.html
+++ b/origins/canada/index.html
@@ -71,7 +71,7 @@ Channellock
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Channellock is a tool manufacturer, probably best known for their channel-locking pliers. They offer a variety of gripping tools, made in the USA.
-Unfortunately not all of their products are USA-made, but those that are carry a prominent label. Those that are not do not denote their origin in an obvious manner.
+Products which are USA-made carry a prominent label. Other items may not specify their origins on product pages.
 </div>
 </div>
 </div>
@@ -116,7 +116,7 @@ Mission Workshop
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Mission Workshop is a San Francisco-based maker of bags and technical clothing; they focused mostly on bike gear, but have since diversified into more technical wear. Much of their technical gear isn&rsquo;t made in the USA, so be sure to check on a product-by-product basis.
+Mission Workshop is a San Francisco-based maker of bags and technical clothing; they focused mostly on bike gear, but have since diversified into more technical wear.
 </div>
 </div>
 </div>
@@ -131,7 +131,7 @@ Redwood Classics
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Casual wear manufacturer based in Canada. A cursory glance suggests they make all of their clothing in Canada.
+Casual wear manufacturer based in Canada.
 </div>
 </div>
 </div>
