--- a/origins/england/index.html
+++ b/origins/england/index.html
@@ -71,7 +71,7 @@ Le Creuset
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Le Creuset is a famous cast iron bakeware manufacturer. Probably best known for their Dutch ovens, but they make a considerable variety of kitchen products.
-While many of their cast iron products are made in France, this does not extend to all of their product lines, which are made in a variety of countries.
+While many of their cast iron products are made in France, the rest of their product lines vary in origin.
 </div>
 </div>
 </div>
@@ -86,7 +86,7 @@ Heath Ceramics
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Heath Ceramics is primarily known for ceramic goods which they make in their California factory. They&rsquo;ve recently started producing other products, like flatware. They also carry a significant number of other items which seem carefully selected, but haven&rsquo;t been fully evaluated.
+Heath Ceramics is primarily known for ceramic goods which they make in their California factory. They&rsquo;ve recently started producing other products, like flatware. They also carry a significant number of other items which seem carefully selected, but haven&rsquo;t been comprehensively evaluated.
 See their vendor page for more information.
 </div>
 </div>
