--- a/origins/germany/index.html
+++ b/origins/germany/index.html
@@ -100,7 +100,7 @@ Oral-B
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Oral-B manufactures a number of their toothbrush lines in Europe; any that fall under the &ldquo;Pro&rdquo;, &ldquo;Professional Care&rdquo;, and &ldquo;Triumph&rdquo; lines. However they do not prominently list the origin of each product, and details can be difficult to find.
+Oral-B manufactures a number of their toothbrush lines in Europe; any that fall under the &ldquo;Pro&rdquo;, &ldquo;Professional Care&rdquo;, and &ldquo;Triumph&rdquo; lines. However they do not prominently list the origin of each product on their website.
 </div>
 </div>
 </div>
@@ -130,7 +130,7 @@ Birkenstock
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Birkenstock&rsquo;s well-known cork sole sandals—as well as many of their other shoes—are made in Germany. However, some styles such as their slippers are only partially German-made, and their products should be evaluated on a case-by-case basis.
+Birkenstock&rsquo;s well-known cork sole sandals—as well as many of their other shoes—are made in Germany. Other products have varying origins.
 </div>
 </div>
 </div>
@@ -145,7 +145,7 @@ Wüsthof
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Wüsthof offers a wide range of kitchen knives. Many are made in Germany—such as their &ldquo;Classic&rdquo; line—but they sell some lines to big box retailers which are not. Similarly they offer other kitchen utensils which are of unknown origin.
+Wüsthof offers a wide range of kitchen knives. Much of their core product line is made in Germany.
 </div>
 </div>
 </div>
