--- a/origins/italy/index.html
+++ b/origins/italy/index.html
@@ -2,21 +2,21 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>portugal | madewhere</title>
+<title>italy | madewhere</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content>
 <meta name=generator content="Hugo 0.92.1">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.css>
-<link href=/origins/portugal/index.xml rel=alternate type=application/rss+xml title=madewhere>
-<link href=/origins/portugal/index.xml rel=feed type=application/rss+xml title=madewhere>
-<meta property="og:title" content="portugal">
+<link href=/origins/italy/index.xml rel=alternate type=application/rss+xml title=madewhere>
+<link href=/origins/italy/index.xml rel=feed type=application/rss+xml title=madewhere>
+<meta property="og:title" content="italy">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://madewhere.co/origins/portugal/">
-<meta itemprop=name content="portugal">
+<meta property="og:url" content="https://madewhere.co/origins/italy/">
+<meta itemprop=name content="italy">
 <meta itemprop=description content><meta name=twitter:card content="summary">
-<meta name=twitter:title content="portugal">
+<meta name=twitter:title content="italy">
 <meta name=twitter:description content>
 <meta name=referrer content="no-referrer">
 </head>
@@ -48,7 +48,7 @@ Vendors
 </nav>
 <div class=tc-l>
 <h1 class=dn>
-portugal
+italy
 </h1>
 </div>
 </div>
@@ -65,28 +65,12 @@ portugal
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
-<a href=/brands/le-cruset/ class="link black dim">
-Le Creuset
+<a href=/brands/demeyere/ class="link black dim">
+Demeyere
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Le Creuset is a famous cast iron bakeware manufacturer. Probably best known for their Dutch ovens, but they make a considerable variety of kitchen products.
-While many of their cast iron products are made in France, the rest of their product lines vary in origin.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/mission-workshop/ class="link black dim">
-Mission Workshop
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Mission Workshop is a San Francisco-based maker of bags and technical clothing; they focused mostly on bike gear, but have since diversified into more technical wear.
+Demeyere offers a wide range of cookware, made in Belgium. Some of their specialty cookware, such as non-stick cookware, are made in Italy. A few accessories are made elsewhere. Their website lists the origin for each product on its product page.
 </div>
 </div>
 </div>
