--- a/origins/unknown/index.html
+++ b/origins/unknown/index.html
@@ -73,7 +73,7 @@ Mission Workshop
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Mission Workshop is a San Francisco-based maker of bags and technical clothing; they focused mostly on bike gear, but have since diversified into more technical wear. Much of their technical gear isn&rsquo;t made in the USA, so be sure to check on a product-by-product basis.
+Mission Workshop is a San Francisco-based maker of bags and technical clothing; they focused mostly on bike gear, but have since diversified into more technical wear.
 </div>
 </div>
 </div>
@@ -88,7 +88,7 @@ Heath Ceramics
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Heath Ceramics is primarily known for ceramic goods which they make in their California factory. They&rsquo;ve recently started producing other products, like flatware. They also carry a significant number of other items which seem carefully selected, but haven&rsquo;t been fully evaluated.
+Heath Ceramics is primarily known for ceramic goods which they make in their California factory. They&rsquo;ve recently started producing other products, like flatware. They also carry a significant number of other items which seem carefully selected, but haven&rsquo;t been comprehensively evaluated.
 See their vendor page for more information.
 </div>
 </div>
@@ -104,7 +104,7 @@ Birkenstock
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Birkenstock&rsquo;s well-known cork sole sandals—as well as many of their other shoes—are made in Germany. However, some styles such as their slippers are only partially German-made, and their products should be evaluated on a case-by-case basis.
+Birkenstock&rsquo;s well-known cork sole sandals—as well as many of their other shoes—are made in Germany. Other products have varying origins.
 </div>
 </div>
 </div>
@@ -119,22 +119,7 @@ Red Wing
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Red Wing is a shoe manufacturer based in Minnesota. They offer a &ldquo;heritage&rdquo; line of shoes which are fully made in the USA. They also offer a &ldquo;work&rdquo; line of shoes and boots which are of varying origins and should be evaluated individually.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/demeyere/ class="link black dim">
-Demeyere
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Demeyere offers a wide range of made in belgium cookware.
+Red Wing is a shoe manufacturer based in Minnesota. They offer a &ldquo;heritage&rdquo; line of shoes which are fully made in the USA. They also offer a &ldquo;work&rdquo; line of shoes and boots which are of varying origins.
 </div>
 </div>
 </div>
@@ -149,7 +134,7 @@ Wüsthof
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Wüsthof offers a wide range of kitchen knives. Many are made in Germany—such as their &ldquo;Classic&rdquo; line—but they sell some lines to big box retailers which are not. Similarly they offer other kitchen utensils which are of unknown origin.
+Wüsthof offers a wide range of kitchen knives. Much of their core product line is made in Germany.
 </div>
 </div>
 </div>
