--- a/origins/usa/index.html
+++ b/origins/usa/index.html
@@ -119,7 +119,7 @@ Channellock
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Channellock is a tool manufacturer, probably best known for their channel-locking pliers. They offer a variety of gripping tools, made in the USA.
-Unfortunately not all of their products are USA-made, but those that are carry a prominent label. Those that are not do not denote their origin in an obvious manner.
+Products which are USA-made carry a prominent label. Other items may not specify their origins on product pages.
 </div>
 </div>
 </div>
@@ -210,7 +210,7 @@ Chicago Metallic
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Chicago Metallic is a bakeware company focused on commercial markets. They claim all products are made in the USA, with global materials.
+Chicago Metallic is a bakeware company focused on commercial markets. Their site asserts that all products are made in the USA, with global materials.
 While Chicago Metallic doesn&rsquo;t sell directly to consumers, they are carried by WebstaurantStore.
 </div>
 </div>
@@ -241,8 +241,7 @@ North St.
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-North St. is a cycling bag maker in Portland, Oregon. They make backpacks, panniers, handlebar bags, etc. They&rsquo;ve also started making more hiking focused gear.
-Many of their bags are made to order.
+North St. is a cycling bag maker in Portland, Oregon. They make backpacks, panniers, handlebar bags, etc. They&rsquo;ve also started making more hiking focused gear. Many of their products are made to order.
 </div>
 </div>
 </div>
@@ -257,7 +256,7 @@ Mission Workshop
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Mission Workshop is a San Francisco-based maker of bags and technical clothing; they focused mostly on bike gear, but have since diversified into more technical wear. Much of their technical gear isn&rsquo;t made in the USA, so be sure to check on a product-by-product basis.
+Mission Workshop is a San Francisco-based maker of bags and technical clothing; they focused mostly on bike gear, but have since diversified into more technical wear.
 </div>
 </div>
 </div>
@@ -272,7 +271,7 @@ Heath Ceramics
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Heath Ceramics is primarily known for ceramic goods which they make in their California factory. They&rsquo;ve recently started producing other products, like flatware. They also carry a significant number of other items which seem carefully selected, but haven&rsquo;t been fully evaluated.
+Heath Ceramics is primarily known for ceramic goods which they make in their California factory. They&rsquo;ve recently started producing other products, like flatware. They also carry a significant number of other items which seem carefully selected, but haven&rsquo;t been comprehensively evaluated.
 See their vendor page for more information.
 </div>
 </div>
@@ -318,7 +317,7 @@ Corelle
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-The Corelle style of glass dishware is ubiquitous and an American staple. It is still made in Corning, NY.
+Corelle is well known for their distinctive glass dishware, which is made in Corning, NY.
 </div>
 </div>
 </div>
@@ -378,7 +377,7 @@ Red Wing
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Red Wing is a shoe manufacturer based in Minnesota. They offer a &ldquo;heritage&rdquo; line of shoes which are fully made in the USA. They also offer a &ldquo;work&rdquo; line of shoes and boots which are of varying origins and should be evaluated individually.
+Red Wing is a shoe manufacturer based in Minnesota. They offer a &ldquo;heritage&rdquo; line of shoes which are fully made in the USA. They also offer a &ldquo;work&rdquo; line of shoes and boots which are of varying origins.
 </div>
 </div>
 </div>
@@ -438,7 +437,7 @@ All-Clad
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-All-Clad is known for their clad cookware, but the also offer utensils and various kitchen goods. Unfortunately they have begun outsourcing some manufacturing to China—usually identifiable by significantly lower prices—but many of their products are still manufactured in the USA.
+All-Clad is known for their clad cookware, but the also offer utensils and various kitchen goods. Most of their core product line—pots, pans, and other cookware—is manufactured in the USA. Other products, such as utensils and appliances, have varying origins.
 </div>
 </div>
 </div>
@@ -484,7 +483,7 @@ Vollrath
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Vollrath is a cookware and bakeware company, focused on commercial kitchen. A substantial portion of their goods are made in the USA, including their &ldquo;Jacob&rsquo;s Pride&rdquo; line of clad cookware which is relatively inexpensive vs other clad lines.
+Vollrath is a cookware and bakeware company, focused on commercial kitchen. A substantial portion of their goods are made in the USA, including their &ldquo;Jacob&rsquo;s Pride&rdquo; line of clad cookware.
 While Vollrath doesn&rsquo;t sell directly to consumers, their goods are carried by WebstaurantStore which lists a prominent &ldquo;Made in USA&rdquo; badge on relevant products.
 </div>
 </div>
