--- a/origins/vietnam/index.html
+++ b/origins/vietnam/index.html
@@ -70,7 +70,7 @@ Mission Workshop
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Mission Workshop is a San Francisco-based maker of bags and technical clothing; they focused mostly on bike gear, but have since diversified into more technical wear. Much of their technical gear isn&rsquo;t made in the USA, so be sure to check on a product-by-product basis.
+Mission Workshop is a San Francisco-based maker of bags and technical clothing; they focused mostly on bike gear, but have since diversified into more technical wear.
 </div>
 </div>
 </div>
