--- a/brands/index.html
+++ b/brands/index.html
@@ -80,7 +80,7 @@ All-Clad
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-All-Clad is known for their clad cookware, but the also offer utensils and various kitchen goods. Unfortunately they have begun outsourcing some manufacturing to China—usually identifiable by significantly lower prices—but many of their products are still manufactured in the USA.
+All-Clad is known for their clad cookware, but the also offer utensils and various kitchen goods. Most of their core product line—pots, pans, and other cookware—is manufactured in the USA. Other products, such as utensils and appliances, have varying origins.
 </div>
 </div>
 </div>
@@ -108,7 +108,7 @@ Birkenstock
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Birkenstock&rsquo;s well-known cork sole sandals—as well as many of their other shoes—are made in Germany. However, some styles such as their slippers are only partially German-made, and their products should be evaluated on a case-by-case basis.
+Birkenstock&rsquo;s well-known cork sole sandals—as well as many of their other shoes—are made in Germany. Other products have varying origins.
 </div>
 </div>
 </div>
@@ -152,7 +152,7 @@ Channellock
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Channellock is a tool manufacturer, probably best known for their channel-locking pliers. They offer a variety of gripping tools, made in the USA.
-Unfortunately not all of their products are USA-made, but those that are carry a prominent label. Those that are not do not denote their origin in an obvious manner.
+Products which are USA-made carry a prominent label. Other items may not specify their origins on product pages.
 </div>
 </div>
 </div>
@@ -166,7 +166,7 @@ Chicago Metallic
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Chicago Metallic is a bakeware company focused on commercial markets. They claim all products are made in the USA, with global materials.
+Chicago Metallic is a bakeware company focused on commercial markets. Their site asserts that all products are made in the USA, with global materials.
 While Chicago Metallic doesn&rsquo;t sell directly to consumers, they are carried by WebstaurantStore.
 </div>
 </div>
@@ -181,7 +181,7 @@ Corelle
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-The Corelle style of glass dishware is ubiquitous and an American staple. It is still made in Corning, NY.
+Corelle is well known for their distinctive glass dishware, which is made in Corning, NY.
 </div>
 </div>
 </div>
@@ -223,7 +223,7 @@ Demeyere
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Demeyere offers a wide range of made in belgium cookware.
+Demeyere offers a wide range of cookware, made in Belgium. Some of their specialty cookware, such as non-stick cookware, are made in Italy. A few accessories are made elsewhere. Their website lists the origin for each product on its product page.
 </div>
 </div>
 </div>
@@ -322,7 +322,7 @@ Heath Ceramics
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Heath Ceramics is primarily known for ceramic goods which they make in their California factory. They&rsquo;ve recently started producing other products, like flatware. They also carry a significant number of other items which seem carefully selected, but haven&rsquo;t been fully evaluated.
+Heath Ceramics is primarily known for ceramic goods which they make in their California factory. They&rsquo;ve recently started producing other products, like flatware. They also carry a significant number of other items which seem carefully selected, but haven&rsquo;t been comprehensively evaluated.
 See their vendor page for more information.
 </div>
 </div>
@@ -408,7 +408,7 @@ Le Creuset
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Le Creuset is a famous cast iron bakeware manufacturer. Probably best known for their Dutch ovens, but they make a considerable variety of kitchen products.
-While many of their cast iron products are made in France, this does not extend to all of their product lines, which are made in a variety of countries.
+While many of their cast iron products are made in France, the rest of their product lines vary in origin.
 </div>
 </div>
 </div>
@@ -436,7 +436,7 @@ Mission Workshop
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Mission Workshop is a San Francisco-based maker of bags and technical clothing; they focused mostly on bike gear, but have since diversified into more technical wear. Much of their technical gear isn&rsquo;t made in the USA, so be sure to check on a product-by-product basis.
+Mission Workshop is a San Francisco-based maker of bags and technical clothing; they focused mostly on bike gear, but have since diversified into more technical wear.
 </div>
 </div>
 </div>
@@ -492,8 +492,7 @@ North St.
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-North St. is a cycling bag maker in Portland, Oregon. They make backpacks, panniers, handlebar bags, etc. They&rsquo;ve also started making more hiking focused gear.
-Many of their bags are made to order.
+North St. is a cycling bag maker in Portland, Oregon. They make backpacks, panniers, handlebar bags, etc. They&rsquo;ve also started making more hiking focused gear. Many of their products are made to order.
 </div>
 </div>
 </div>
@@ -507,7 +506,7 @@ Oral-B
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Oral-B manufactures a number of their toothbrush lines in Europe; any that fall under the &ldquo;Pro&rdquo;, &ldquo;Professional Care&rdquo;, and &ldquo;Triumph&rdquo; lines. However they do not prominently list the origin of each product, and details can be difficult to find.
+Oral-B manufactures a number of their toothbrush lines in Europe; any that fall under the &ldquo;Pro&rdquo;, &ldquo;Professional Care&rdquo;, and &ldquo;Triumph&rdquo; lines. However they do not prominently list the origin of each product on their website.
 </div>
 </div>
 </div>
@@ -535,7 +534,7 @@ Red Wing
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Red Wing is a shoe manufacturer based in Minnesota. They offer a &ldquo;heritage&rdquo; line of shoes which are fully made in the USA. They also offer a &ldquo;work&rdquo; line of shoes and boots which are of varying origins and should be evaluated individually.
+Red Wing is a shoe manufacturer based in Minnesota. They offer a &ldquo;heritage&rdquo; line of shoes which are fully made in the USA. They also offer a &ldquo;work&rdquo; line of shoes and boots which are of varying origins.
 </div>
 </div>
 </div>
@@ -549,7 +548,7 @@ Redwood Classics
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Casual wear manufacturer based in Canada. A cursory glance suggests they make all of their clothing in Canada.
+Casual wear manufacturer based in Canada.
 </div>
 </div>
 </div>
@@ -677,7 +676,7 @@ Wüsthof
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Wüsthof offers a wide range of kitchen knives. Many are made in Germany—such as their &ldquo;Classic&rdquo; line—but they sell some lines to big box retailers which are not. Similarly they offer other kitchen utensils which are of unknown origin.
+Wüsthof offers a wide range of kitchen knives. Much of their core product line is made in Germany.
 </div>
 </div>
 </div>
