deploy: 7c45cf1248e65d894ad4c476120ae78a8a6856ab

--- a/index.html
+++ b/index.html
@@ -271,14 +271,14 @@ Recent Brands
 <div class="flex flex-column flex-row-ns">
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=/brands/usa-pan/ class="color-inherit dim link">
-USA Pan
+<a href=/brands/dehen-1920/ class="color-inherit dim link">
+Dehen 1920
 </a>
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-USA Pan makes a distinctive style of baking pan, offering the usual suspects: baking sheets, muffin tins, loaf pans, etc.
+Dehen 1920 is a clothing manufacturer based in Portland, Oregon.
 </div>
-<a href=/brands/usa-pan/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+<a href=/brands/dehen-1920/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
 </div>
 </div>
 </div>
@@ -290,14 +290,14 @@ USA Pan makes a distinctive style of baking pan, offering the usual suspects: ba
 <div class="flex flex-column flex-row-ns">
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=/brands/zero-japan/ class="color-inherit dim link">
-Zero Japan
+<a href=/brands/stanfields/ class="color-inherit dim link">
+Stanfield's
 </a>
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-Zero Japan is a Japanese ceramics manufacturer, probably best known for the &ldquo;Bee House&rdquo; pour-over coffee dripper. They produce a range of ceramic goods including butter dishes, storage canisters, and salt boxes.
+Stanfield&rsquo;s is a Canadian clothing manufacturer. They produce a wide range of clothing from underwear to outerwear, as well as a line of wool clothing, from their Nova Scotia factories.
 </div>
-<a href=/brands/zero-japan/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+<a href=/brands/stanfields/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
 </div>
 </div>
 </div>
@@ -309,14 +309,14 @@ Zero Japan is a Japanese ceramics manufacturer, probably best known for the &ldq
 <div class="flex flex-column flex-row-ns">
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=/brands/epicurean/ class="color-inherit dim link">
-Epicurean
+<a href=/brands/vitamix/ class="color-inherit dim link">
+Vitamix
 </a>
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-Epicurean is a USA-based manufacturer of composite cutting surfaces. They have a wide range of cutting boards and other kitchen accessories. All products are made in the USA.
+Vitamix manufacturers high performance commercial and home blenders out of their Ohio factory. Products which are made in the USA are clearly labeled on individual pages.
 </div>
-<a href=/brands/epicurean/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+<a href=/brands/vitamix/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
 </div>
 </div>
 </div>
@@ -326,23 +326,23 @@ Epicurean is a USA-based manufacturer of composite cutting surfaces. They have a
 <section class=w-100>
 <h1 class=f3>More</h1>
 <h2 class="f5 fw4 mb4 dib mr3">
-<a href=/brands/estwing/ class="link black dim">
-Estwing
+<a href=/brands/veritas-tools/ class="link black dim">
+Veritas Tools
 </a>
 </h2>
 <h2 class="f5 fw4 mb4 dib mr3">
-<a href=/brands/channellock/ class="link black dim">
-Channellock
+<a href=/brands/usa-pan/ class="link black dim">
+USA Pan
 </a>
 </h2>
 <h2 class="f5 fw4 mb4 dib mr3">
-<a href=/brands/nab-leather/ class="link black dim">
-Nab Leather Co
+<a href=/brands/zero-japan/ class="link black dim">
+Zero Japan
 </a>
 </h2>
 <h2 class="f5 fw4 mb4 dib mr3">
-<a href=/brands/tanner-goods/ class="link black dim">
-Tanner Goods
+<a href=/brands/epicurean/ class="link black dim">
+Epicurean
 </a>
 </h2>
 <a href=/brands/ class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">All Brands</a>
