--- a/brands/index.html
+++ b/brands/index.html
@@ -62,34 +62,6 @@ Brands
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
-<a href=/brands/360-cookware/ class="link black dim">
-360 Cookware
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-360 Cookware makes various cookware, bakeware, flatware, and other utensils in the USA.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/all-clad/ class="link black dim">
-All-Clad
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-All-Clad is known for their clad cookware, but the also offer utensils and various kitchen goods. Most of their core product line—pots, pans, and other cookware—is manufactured in the USA. Other products, such as utensils and appliances, have varying origins.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
 <a href=/brands/benchmade/ class="link black dim">
 Benchmade
 </a>
@@ -124,21 +96,6 @@ Braun
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Braun manufactures a line of shaving and hair care products, made in Germany. They are also the parent company of Oral-B, which provides a line of electric toothbrushes.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/cambro/ class="link black dim">
-Cambro
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Cambro is best known for their food storage products, which are popular in food service but also excellent for home. The vast majority of these are made in the USA, at least for the USA market. They highlight all of their locations and purposes on their careers page, as well as the number of employees in each location.
-Cambro focuses on commercial markets and doesn&rsquo;t sell direct to consumers, but their products can be found on WebstaurantStore.
 </div>
 </div>
 </div>
@@ -219,12 +176,12 @@ Darn Tough offers merino wool socks for a range of purposes; they are probably b
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
-<a href=/brands/demeyere/ class="link black dim">
-Demeyere
+<a href=/brands/dehen-1920/ class="link black dim">
+Dehen 1920
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Demeyere offers a wide range of cookware, made in Belgium. Some of their specialty cookware, such as non-stick cookware, are made in Italy. A few accessories are made elsewhere. Their website lists the origin for each product on its product page.
+Dehen 1920 is a clothing manufacturer based in Portland, Oregon.
 </div>
 </div>
 </div>
@@ -233,13 +190,12 @@ Demeyere offers a wide range of cookware, made in Belgium. Some of their special
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
-<a href=/brands/duralex/ class="link black dim">
-Duralex
+<a href=/brands/demeyere/ class="link black dim">
+Demeyere
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Duralex is a manufacturer of glassware; they specialize in drinkware and dinnerware, and is known for its robustness. All of their glassware is made in France, and can be bought direct from their USA distribution.
-In 2021 they were purchased by Pyrex, but while sharing a name with the American Pyrex (owned by Corning), Pyrex EU appears to be a different company.
+Demeyere offers a wide range of cookware, made in Belgium. Some of their specialty cookware, such as non-stick cookware, are made in Italy. A few accessories are made elsewhere. Their website lists the origin for each product on its product page.
 </div>
 </div>
 </div>
@@ -629,6 +585,20 @@ Shoes Like Pottery makes casual low and high top sneakers. As with all MoonStar 
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/stanfields/ class="link black dim">
+Stanfield's
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Stanfield&rsquo;s is a Canadian clothing manufacturer. They produce a wide range of clothing from underwear to outerwear, as well as a line of wool clothing, from their Nova Scotia factories.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/staub/ class="link black dim">
 Staub
 </a>
@@ -664,6 +634,34 @@ USA Pan
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 USA Pan makes a distinctive style of baking pan, offering the usual suspects: baking sheets, muffin tins, loaf pans, etc.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/veritas-tools/ class="link black dim">
+Veritas Tools
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Veritas Tools is a Canadian-made woodworking tools brand.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/vitamix/ class="link black dim">
+Vitamix
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Vitamix manufacturers high performance commercial and home blenders out of their Ohio factory. Products which are made in the USA are clearly labeled on individual pages.
 </div>
 </div>
 </div>
