--- a/origins/index.html
+++ b/origins/index.html
@@ -128,6 +128,32 @@ Canada
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/stanfields/ class="link black dim">
+Stanfield's
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Stanfield&rsquo;s is a Canadian clothing manufacturer. They produce a wide range of clothing from underwear to outerwear, as well as a line of wool clothing, from their Nova Scotia factories.
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/veritas-tools/ class="link black dim">
+Veritas Tools
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Veritas Tools is a Canadian-made woodworking tools brand.
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/channellock/ class="link black dim">
 Channellock
 </a>
@@ -195,6 +221,19 @@ Casual wear manufacturer based in Canada.
 China
 </a>
 </h2>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/vitamix/ class="link black dim">
+Vitamix
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Vitamix manufacturers high performance commercial and home blenders out of their Ohio factory. Products which are made in the USA are clearly labeled on individual pages.
+</div>
+</div>
+</div>
 <div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
@@ -837,6 +876,32 @@ Zojirushi is probably best known for their rice cookers, but they make a conside
 USA
 </a>
 </h2>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/dehen-1920/ class="link black dim">
+Dehen 1920
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Dehen 1920 is a clothing manufacturer based in Portland, Oregon.
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/vitamix/ class="link black dim">
+Vitamix
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Vitamix manufacturers high performance commercial and home blenders out of their Ohio factory. Products which are made in the USA are clearly labeled on individual pages.
+</div>
+</div>
+</div>
 <div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
