--- a/origins/usa/index.html
+++ b/origins/usa/index.html
@@ -69,6 +69,36 @@ Products made in the United States of America.
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/dehen-1920/ class="link black dim">
+Dehen 1920
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Dehen 1920 is a clothing manufacturer based in Portland, Oregon.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white">
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/vitamix/ class="link black dim">
+Vitamix
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Vitamix manufacturers high performance commercial and home blenders out of their Ohio factory. Products which are made in the USA are clearly labeled on individual pages.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white">
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/usa-pan/ class="link black dim">
 USA Pan
 </a>
