--- a/brands/index.html
+++ b/brands/index.html
@@ -62,6 +62,34 @@ Brands
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/360-cookware/ class="link black dim">
+360 Cookware
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+360 Cookware makes various cookware, bakeware, flatware, and other utensils in the USA.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/all-clad/ class="link black dim">
+All-Clad
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+All-Clad is known for their clad cookware, but the also offer utensils and various kitchen goods. Most of their core product line—pots, pans, and other cookware—is manufactured in the USA. Other products, such as utensils and appliances, have varying origins.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/benchmade/ class="link black dim">
 Benchmade
 </a>
@@ -96,6 +124,21 @@ Braun
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Braun manufactures a line of shaving and hair care products, made in Germany. They are also the parent company of Oral-B, which provides a line of electric toothbrushes.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/cambro/ class="link black dim">
+Cambro
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Cambro is best known for their food storage products, which are popular in food service but also excellent for home. The vast majority of these are made in the USA, at least for the USA market. They highlight all of their locations and purposes on their careers page, as well as the number of employees in each location.
+Cambro focuses on commercial markets and doesn&rsquo;t sell direct to consumers, but their products can be found on WebstaurantStore.
 </div>
 </div>
 </div>
@@ -196,6 +239,21 @@ Demeyere
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Demeyere offers a wide range of cookware, made in Belgium. Some of their specialty cookware, such as non-stick cookware, are made in Italy. A few accessories are made elsewhere. Their website lists the origin for each product on its product page.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/duralex/ class="link black dim">
+Duralex
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Duralex is a manufacturer of glassware; they specialize in drinkware and dinnerware, and is known for its robustness. All of their glassware is made in France, and can be bought direct from their USA distribution.
+In 2021 they were purchased by Pyrex, but while sharing a name with the American Pyrex (owned by Corning), Pyrex EU appears to be a different company.
 </div>
 </div>
 </div>
@@ -585,6 +643,20 @@ Shoes Like Pottery makes casual low and high top sneakers. As with all MoonStar 
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/solidteknics/ class="link black dim">
+Solidteknics
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Solidteknics is a manufacturer with seemingly two independent arms: one in Australia, and one in the USA. They manufacture wrought iron cookware in each of these markets.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/stanfields/ class="link black dim">
 Stanfield's
 </a>
@@ -628,6 +700,21 @@ While Tanner&rsquo;s core products are produced in the USA, they do not exclusiv
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/thermoworks/ class="link black dim">
+Thermoworks
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Thermoworks primary product is handheld fast-read digital thermometers for cooking use. Their flagship Thermapen line is made in England.
+Products which are made in England are explicitly market on product pages.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/usa-pan/ class="link black dim">
 USA Pan
 </a>
@@ -648,91 +735,6 @@ Veritas Tools
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Veritas Tools is a Canadian-made woodworking tools brand.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/vitamix/ class="link black dim">
-Vitamix
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Vitamix manufacturers high performance commercial and home blenders out of their Ohio factory. Products which are made in the USA are clearly labeled on individual pages.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/wusthof/ class="link black dim">
-Wüsthof
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Wüsthof offers a wide range of kitchen knives. Much of their core product line is made in Germany.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/zero-japan/ class="link black dim">
-Zero Japan
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Zero Japan is a Japanese ceramics manufacturer, probably best known for the &ldquo;Bee House&rdquo; pour-over coffee dripper. They produce a range of ceramic goods including butter dishes, storage canisters, and salt boxes.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/zojirushi/ class="link black dim">
-Zojirushi
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Zojirushi is probably best known for their rice cookers, but they make a considerable line of small appliances including water boilers and bread makers, a number of which are made in Japan. They also make a line of vacuum mugs and containers, but their country of origin varies.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/zwilling/ class="link black dim">
-ZWILLING J.A. Henckels
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-ZWILLING J.A. Henckles is the parent company of several brands, including Staub and Demeyere.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/emile-henry/ class="link black dim">
-Émile Henry
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Émile Henry is a ceramics manufacturer in France, best known for their bakeware.
-In the United States, they are affiliated with Duralex although that affiliation isn&rsquo;t clear: it may just be the US distributor is the same company.
 </div>
 </div>
 </div>
