deploy: dad246e280cb757545b4dac46c78403dc0f5d3f8

--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@ A website dedicated to quality, fairly made goods.
 </a>
 </li>
 <li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/cycling/>
+<span class=ttc>cycling</span>
+</a>
+</li>
+<li class="dib mr1 mb2">
 <a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/dinnerware/>
 <span class=ttc>Dinnerware</span>
 </a>
@@ -125,6 +130,11 @@ A website dedicated to quality, fairly made goods.
 <li class="dib mr1 mb2">
 <a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/kitchen/>
 <span class=ttc>Kitchen</span>
+</a>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/kitchenware/>
+<span class=ttc>kitchenware</span>
 </a>
 </li>
 <li class="dib mr1 mb2">
@@ -271,14 +281,14 @@ Recent Brands
 <div class="flex flex-column flex-row-ns">
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=/brands/dehen-1920/ class="color-inherit dim link">
-Dehen 1920
+<a href=/brands/lloydpans/ class="color-inherit dim link">
+LloydPans
 </a>
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-Dehen 1920 is a clothing manufacturer based in Portland, Oregon.
+LloydPans is a kitchenware manufacturer, offering fry pans, baking sheets, and pizza pans, made in the USA.
 </div>
-<a href=/brands/dehen-1920/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+<a href=/brands/lloydpans/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
 </div>
 </div>
 </div>
@@ -290,14 +300,14 @@ Dehen 1920 is a clothing manufacturer based in Portland, Oregon.
 <div class="flex flex-column flex-row-ns">
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=/brands/stanfields/ class="color-inherit dim link">
-Stanfield's
+<a href=/brands/weck/ class="color-inherit dim link">
+Weck
 </a>
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-Stanfield&rsquo;s is a Canadian clothing manufacturer. They produce a wide range of clothing from underwear to outerwear, as well as a line of wool clothing, from their Nova Scotia factories.
+Weck produces a variety of canning and storage jars in Germany.
 </div>
-<a href=/brands/stanfields/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+<a href=/brands/weck/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
 </div>
 </div>
 </div>
@@ -309,14 +319,14 @@ Stanfield&rsquo;s is a Canadian clothing manufacturer. They produce a wide range
 <div class="flex flex-column flex-row-ns">
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=/brands/vitamix/ class="color-inherit dim link">
-Vitamix
+<a href=/brands/bormioli-rocco/ class="color-inherit dim link">
+Bormioli Rocco
 </a>
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-Vitamix manufacturers high performance commercial and home blenders out of their Ohio factory. Products which are made in the USA are clearly labeled on individual pages.
+Bormioli Rocco is an Italian glassware manufacturer. They make a variety of glassware, including: tableware, canning and preserving, and storage jars.
 </div>
-<a href=/brands/vitamix/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+<a href=/brands/bormioli-rocco/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
 </div>
 </div>
 </div>
@@ -326,23 +336,23 @@ Vitamix manufacturers high performance commercial and home blenders out of their
 <section class=w-100>
 <h1 class=f3>More</h1>
 <h2 class="f5 fw4 mb4 dib mr3">
-<a href=/brands/veritas-tools/ class="link black dim">
-Veritas Tools
+<a href=/brands/picquic/ class="link black dim">
+Picquic
 </a>
 </h2>
 <h2 class="f5 fw4 mb4 dib mr3">
-<a href=/brands/usa-pan/ class="link black dim">
-USA Pan
+<a href=/brands/white-industries/ class="link black dim">
+White Industries
 </a>
 </h2>
 <h2 class="f5 fw4 mb4 dib mr3">
-<a href=/brands/zero-japan/ class="link black dim">
-Zero Japan
+<a href=/brands/chris-king/ class="link black dim">
+Chris King
 </a>
 </h2>
 <h2 class="f5 fw4 mb4 dib mr3">
-<a href=/brands/epicurean/ class="link black dim">
-Epicurean
+<a href=/brands/dehen-1920/ class="link black dim">
+Dehen 1920
 </a>
 </h2>
 <a href=/brands/ class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">All Brands</a>
