--- a/origins/italy/index.html
+++ b/origins/italy/index.html
@@ -66,6 +66,21 @@ italy
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/bormioli-rocco/ class="link black dim">
+Bormioli Rocco
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Bormioli Rocco is an Italian glassware manufacturer. They make a variety of glassware, including: tableware, canning and preserving, and storage jars.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white">
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/demeyere/ class="link black dim">
 Demeyere
 </a>
