--- a/brands/index.html
+++ b/brands/index.html
@@ -118,6 +118,20 @@ Birkenstock&rsquo;s well-known cork sole sandals—as well as many of their othe
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/bormioli-rocco/ class="link black dim">
+Bormioli Rocco
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Bormioli Rocco is an Italian glassware manufacturer. They make a variety of glassware, including: tableware, canning and preserving, and storage jars.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/braun/ class="link black dim">
 Braun
 </a>
@@ -169,6 +183,20 @@ Chicago Metallic
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Chicago Metallic is a bakeware company focused on commercial markets. Their site asserts that all products are made in the USA, with global materials.
 While Chicago Metallic doesn&rsquo;t sell directly to consumers, they are carried by WebstaurantStore.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/chris-king/ class="link black dim">
+Chris King
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Chris King is a bicycle components manufacturer based in Portland, Oregon.
 </div>
 </div>
 </div>
@@ -446,6 +474,20 @@ Liberty Tabletop is a flatware manufacturer, which is a subsidiary of Sherrill M
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/lloydpans/ class="link black dim">
+LloydPans
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+LloydPans is a kitchenware manufacturer, offering fry pans, baking sheets, and pizza pans, made in the USA.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/mission-workshop/ class="link black dim">
 Mission Workshop
 </a>
@@ -536,6 +578,20 @@ Peugeot Saveurs
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Peugeot is probably best known for their pepper mills, but offer a small range of kitchen products.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/picquic/ class="link black dim">
+Picquic
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Picquic is a Canadian tool manufacturer, specializing in multi-bit screwdrivers.
 </div>
 </div>
 </div>
@@ -677,64 +733,6 @@ Staub
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Staub is a cookware manufacturer specializing in cast iron pans and dutch ovens.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/tanner-goods/ class="link black dim">
-Tanner Goods
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Tanner Goods is a leather goods manufacturer based in Portland, OR. They produce a range of belts, wallets, bags, and other accessories.
-While Tanner&rsquo;s core products are produced in the USA, they do not exclusively carry US-made products.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/thermoworks/ class="link black dim">
-Thermoworks
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Thermoworks primary product is handheld fast-read digital thermometers for cooking use. Their flagship Thermapen line is made in England.
-Products which are made in England are explicitly market on product pages.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/usa-pan/ class="link black dim">
-USA Pan
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-USA Pan makes a distinctive style of baking pan, offering the usual suspects: baking sheets, muffin tins, loaf pans, etc.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/veritas-tools/ class="link black dim">
-Veritas Tools
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Veritas Tools is a Canadian-made woodworking tools brand.
 </div>
 </div>
 </div>
