--- a/origins/usa/index.html
+++ b/origins/usa/index.html
@@ -69,6 +69,51 @@ Products made in the United States of America.
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/lloydpans/ class="link black dim">
+LloydPans
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+LloydPans is a kitchenware manufacturer, offering fry pans, baking sheets, and pizza pans, made in the USA.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white">
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/white-industries/ class="link black dim">
+White Industries
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+White Industries is a bicycle component manufacturer based in California.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white">
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/chris-king/ class="link black dim">
+Chris King
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Chris King is a bicycle components manufacturer based in Portland, Oregon.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white">
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/dehen-1920/ class="link black dim">
 Dehen 1920
 </a>
